--- a/Scss/styles.scss
+++ b/Scss/styles.scss
@@ -105,7 +105,7 @@ button {
 
 section {
     padding: 0 var(--padding-section-horizontal);
-    margin-bottom: 15vh;
+    margin-bottom: 20vh;
 
     &:first-of-type {
         padding-top: var(--header-height);
